--- a/src/main/resources/jrxml/ExecutedProjectsPrint.jrxml
+++ b/src/main/resources/jrxml/ExecutedProjectsPrint.jrxml
@@ -14,6 +14,7 @@
 	<field name="YPDJ" class="java.lang.String"/>
 	<field name="FYRQ" class="java.lang.String"/>
 	<field name="MXMC" class="java.lang.String"/>
+	<field name="BZXX" class="java.lang.String"/>
 	<pageHeader>
 		<band height="35">
 			<textField>
@@ -103,7 +104,7 @@
 				<text><![CDATA[项目名称]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="myBaseStyleName" x="511" y="1" width="151" height="20" uuid="ac11a0e2-8fef-437e-a6c5-d6460ce21ea3"/>
+				<reportElement style="myBaseStyleName" x="511" y="1" width="100" height="20" uuid="ac11a0e2-8fef-437e-a6c5-d6460ce21ea3"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -116,7 +117,7 @@
 				<text><![CDATA[大夜班]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="myBaseStyleName" x="662" y="1" width="148" height="20" uuid="8656f909-df2b-4ad1-be70-fcbcd7a3678b"/>
+				<reportElement style="myBaseStyleName" x="611" y="1" width="100" height="20" uuid="8656f909-df2b-4ad1-be70-fcbcd7a3678b"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -140,6 +141,19 @@
 					<font fontName="宋体" size="14"/>
 				</textElement>
 				<text><![CDATA[费用日期]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="myBaseStyleName" x="711" y="1" width="99" height="20" uuid="efcf354b-a089-472f-b60b-0837c078d386"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center" markup="none">
+					<font fontName="宋体" size="14"/>
+				</textElement>
+				<text><![CDATA[备注]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -191,7 +205,7 @@
 				<textFieldExpression><![CDATA[$F{YZMC}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="myBaseStyleName" x="511" y="1" width="151" height="20" uuid="e5acba07-94ef-4616-adb2-e37131f17544"/>
+				<reportElement style="myBaseStyleName" x="511" y="1" width="100" height="20" uuid="e5acba07-94ef-4616-adb2-e37131f17544"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Solid"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid"/>
@@ -201,7 +215,7 @@
 				</textElement>
 			</textField>
 			<textField>
-				<reportElement style="myBaseStyleName" x="662" y="1" width="148" height="20" uuid="0c01ae83-dee9-43d6-95da-47181a07a162"/>
+				<reportElement style="myBaseStyleName" x="611" y="1" width="100" height="20" uuid="0c01ae83-dee9-43d6-95da-47181a07a162"/>
 				<box>
 					<bottomPen lineWidth="1.0" lineStyle="Solid"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid"/>
@@ -225,6 +239,17 @@
 					<font fontName="宋体" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FYRQ}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="myBaseStyleName" x="711" y="1" width="99" height="20" uuid="50e56155-82ee-40e7-9e2c-954da0a2952c"/>
+				<box>
+					<bottomPen lineWidth="1.0" lineStyle="Solid"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="宋体" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{BZXX}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
